k8s/manifests/apps/network-system/static-routes/prusa/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prusa-mk3s
  namespace: network-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: "printer-3d-nozzle-outline"
    hajimari.io/appName: "prusa-mk3s"

spec:
  tls:
    - secretName: tls.prusa-mk3s
      hosts:
        - "prusa-mk3s.${EXTERNAL_DOMAIN}"

  rules:
    - host: prusa-mk3s.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prusa-mk3s
                port:
                  number: 80
